# Bundestag_Wrapped

./: .dockerignore  .gitignore  .mcp.json  .npmrc  CLAUDE.md  Dockerfile  README.md  SECURITY.md  chatgpt-app-submission.json  docker-compose.yaml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-deps-maintainer.yml  claude-fix-dep-pr.yml  codeql.yml  dependabot-automerge.yml  dependency-review.yml  deps-lockfile.yml  publish-mcp.yml  wrapped-refresh.yml
apps/wrapped/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  eslint.config.js  nginx.conf  package.json  vite.config.ts
mobile/: app.json  eas.json  package-lock.json  package.json
mobile/app/: index.tsx
mobile/components/: FloatingSoundToggle.tsx  ShareCanvasSkia.tsx  SkiaBubbles.tsx  SlideAnimationWrapper.tsx  SlideRenderer.tsx  SpeakerShareCanvasSkia.tsx  (+2 more)
public/: manifest.webmanifest  neutral_interjections.json  sitemap.xml  test-share.html  wrapped.json  zwischenrufer.json
services/analysis/: Dockerfile.api  README.md  pyproject.toml
services/analysis/src/noun_analysis/: parser.py
services/analysis/src/noun_analysis/api/: routes.py
services/analysis/src/noun_analysis/lexicons/: topics.py
services/analysis/src/noun_analysis/wrapped/: wrapped_loader.py
services/analysis/src/noun_analysis/wrapped/speaker_export/: exporter.py  rankings.py  spirit_animals.py
services/analysis/tests/: test_speaker_exporter.py
src/: App.tsx  index.css
(+1577 files in other folders)
