[project]
name = "bundestag-analysis"
version = "1.0.0"
description = "NLP analysis library for German Bundestag speeches"
readme = "README.md"
# pandas 3.x requires Python >=3.11
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.3",
    "spacy>=3.8.0",
    "rich>=15.0.0",
    "click>=8.2.0",
    "pandas>=3.0.0",
    "orjson>=3.11.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "commitizen>=4.16.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
bundestag-analysis = "noun_analysis.cli:main"
noun-analysis = "noun_analysis.cli:main"  # Backward compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noun_analysis", "src/bundestag_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
